--- a/#src/templates/theme/components/footer.html
+++ b/#src/templates/theme/components/footer.html
@@ -2,7 +2,8 @@
 <footer class="footer">
   <div class="footer__container">
     <div class="footer__inner">
-      <div class="footer__logo"><img src="{% static 'theme/mb/images/logo-footer.svg' %}" alt="Логотип" title="Логотип" /></div>
+      <div class="footer__logo"><img src="{% static 'theme/mb/images/logo-footer.svg' %}" alt="Логотип"
+                                     title="Логотип"/></div>
       <div class="footer__menu">
         <ul class="footer__list">
           <li class="footer__item--first">Памятники</li>
@@ -25,6 +26,8 @@
           <li class="footer__item"><a href="{% url 'delivery' %}">Оплата</a></li>
           <li class="footer__item"><a href="{% url 'service' %}">Услуги</a></li>
           <li class="footer__item"><a href="{% url 'contact' %}">Контакты</a></li>
+          <li class="footer__item"><a href="{% url 'privacy' %}">Политика конфиденциальности</a></li>
+          <li class="footer__item"><a href="{% url 'cookie' %}">Политика в отношении файлов cookie</a></li>
         </ul>
       </div>
       <div class="footer__contact">
@@ -56,6 +59,15 @@
         </div>
       </div>
     </div>
-    <div class="footer__author"><a href="https://аврора-томск.рф/sozdanie-sajtov/">Разработка и продвижение сайта</a> <a href="https://аврора-томск.рф">РА Аврора</a></div>
+    <div class="footer__author"><a href="https://аврора-томск.рф/sozdanie-sajtov/">Разработка и продвижение сайта</a> <a
+      href="https://аврора-томск.рф">РА Аврора</a></div>
   </div>
 </footer>
+
+<div id="cookie-notice" class="cookie-notice">
+  Мы используем cookie. Это позволяет нам анализировать взаимодействие посетителей с сайтом и делать его лучше.
+  Продолжая пользоваться сайтом, вы соглашаетесь с использованием файлов
+  <a href="{% url 'cookie' %}" target="_blank">cookie</a> и
+  <a href="{% url 'privacy' %}" target="_blank">политикой конфиденциаьности.</a>
+  <button id="accept-cookies" class="accept-cookies">Я согласен</button>
+</div>
