--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -1261,6 +1261,46 @@ html.lock body::before {
   border-color: rgba(58, 67, 75, 0.4);
 }
 
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  padding: 8px;
+}
+
+.cookie-notice {
+  display: none;
+  width: 60%;
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  background-color: #384b5a;
+  color: #ffffff;
+  padding: 15px;
+  border-radius: 5px;
+  line-height: 150%;
+  z-index: 1000;
+}
+
+.cookie-notice a {
+  color: #b25f68;
+  text-decoration: underline;
+}
+
+.accept-cookies {
+  margin-left: 10px;
+  padding: 5px 10px;
+  background-color: #41a2d0;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
 .about__grid {
   display: grid;
   grid-template-columns: 1fr 300px;
@@ -4786,6 +4826,12 @@ body::after {
 
   .index-service__cards {
     gap: 20px;
+  }
+
+  .cookie-notice {
+    width: 100%;
+    left: 0;
+    margin: 0px 20px;
   }
 
   .header-under {
