--- a/#src/templates/theme/pages/cookie.html
+++ b/#src/templates/theme/pages/cookie.html
@@ -4,8 +4,7 @@
 <main class="page">
   <div class="text">
     <div class="text__container">
-      <h1>Политика куки</h1>
-      <p><strong>Политика в отношении файлов cookie.</strong></p>
+      <h1 style="font-size: 25px; font-weight: 700; margin-top: 30px;"><strong>Политика в отношении файлов cookie.</strong></h1><br><br>
       <p>Мы используем cookie и похожие технологии на нашем веб-сайте для предоставления наших услуг и улучшения
         качества работы нашего веб-сайта и<br>сервисов. В настоящей Политике приводятся описания технологий, которые
         могут применяться нами для сбора информации об использовании нашего сайта и<br>материалов, рассылаемых по
