--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -49,6 +49,14 @@
     justify-content: space-between;
   }
 
+  @media screen and (max-width: 578px) {
+    gap: 0px;
+  }
+
+  @media screen and (max-width: 375px) {
+    flex-wrap: wrap;
+  }
+
 
   // .top-main__left
 
