--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -1704,10 +1704,14 @@ th, td {
     text-decoration: underline;
   }
 
+  @media screen and (max-width: 992px) {
+    bottom: 80px;
+  }
+
   @media screen and (max-width: 768px) {
     width: 100%;
     left: 0;
-    margin: 0px 20px;
+
   }
 }
 
