--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -3481,6 +3481,10 @@ body::after {
 
 .category-details__row-onecol .category-details__col:nth-child(1) {
   width: 100%;
+  position: relative;
+  left: 0;
+  top: 0;
+  height: 100%;
 }
 
 .category-details__col {
