--- a/#src/scss/pages/catalog/category-details.scss
+++ b/#src/scss/pages/catalog/category-details.scss
@@ -48,11 +48,14 @@
     width: 100%;
 
     .category-details__col:nth-child(1) {
-      width: 100%;
-      position: relative;
-      left: 0;
-      top: 0;
-      height: 100%;
+      @media screen and (max-width: 1200px) {
+        position: fixed;
+        top: 0;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+      }
+
     }
   }
 
