--- a/#src/scss/pages/catalog/category-details.scss
+++ b/#src/scss/pages/catalog/category-details.scss
@@ -49,11 +49,7 @@
 
     .category-details__col:nth-child(1) {
       @media screen and (max-width: 1200px) {
-        position: fixed;
-        top: 0;
-        left: 0%;
-        width: 100%;
-        height: 100%;
+        width: 100%
       }
 
     }
@@ -95,16 +91,16 @@
       min-width: 290px;
 
       @media screen and (max-width: 1200px) {
-        position: fixed;
-        top: 0;
-        left: -150%;
-        width: 100%;
-        height: calc(100vh - 80px);
-        overflow-y: auto;
-        background-color: rgba($color: $white, $alpha: 1.0);
-        padding: 30px;
-        z-index: 101;
-        transition: $animation_speed;
+        //position: fixed;
+        //top: 0;
+        //left: -150%;
+        //width: 100%;
+        //height: calc(100vh - 80px);
+        //overflow-y: auto;
+        //background-color: rgba($color: $white, $alpha: 1.0);
+        //padding: 30px;
+        //z-index: 101;
+        //transition: $animation_speed;
       }
 
       .form__submit {
