--- a/#src/templates/theme/components/header-single.html
+++ b/#src/templates/theme/components/header-single.html
@@ -4,7 +4,7 @@
     <div class="header-under__inner">
       <a href="/" class="header-under__logo">
         <img src="{% static 'theme/mb/images/logo.png' %}" alt="Мемориальные услуги в Томске"
-          title="Мемориальные услуги в Томске" />
+             title="Мемориальные услуги в Томске"/>
         <span>Основан в 1989 г.</span>
       </a>
       <div class="header-under__address">
@@ -17,7 +17,7 @@
             <a href="tel:+79009210915">
               +7(900) 921-09-15
               <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="Заказать звонок"
-                title="Заказать звонок" />
+                   title="Заказать звонок"/>
             </a>
           </div>
           <div class="header-under__address-col">
@@ -27,24 +27,24 @@
             <a href="tel:+79039554018">
               +7(903) 955-40-18
               <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="Заказать звонок"
-                title="Заказать звонок" />
+                   title="Заказать звонок"/>
             </a>
           </div>
         </div>
       </div>
       <div class="header-under__action">
         <button class="subdomain-button" id="subdomain-button" data-popup="subdomain">
-          <img src="{% static 'theme/mb/images/icon/location.svg' %}" alt="Иконка адреса" title="Иконка адреса" />
+          <img src="{% static 'theme/mb/images/icon/location.svg' %}" alt="Иконка адреса" title="Иконка адреса"/>
           <span id="city">Томск</span>
         </button>
         <button type="button" data-popup="callback">
           Заказать звонок
           <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="Заказать звонок Акрополь"
-            title="Заказать звонок Акрополь" />
+               title="Заказать звонок Акрополь"/>
         </button>
         <button type="button" class="top-main__cart show-cart" id="show-cart">
           <span>Корзина</span>
-          <img src="{% static 'theme/mb/images/icon/cart.svg' %}" alt="Иконка корзины" title="Иконка корзины" />
+          <img src="{% static 'theme/mb/images/icon/cart.svg' %}" alt="Иконка корзины" title="Иконка корзины"/>
           {% user_carts request as carts %} {% if carts %}
           <span class="count-product-cart" id="count-goods">{{ carts.total_quantity }}</span>
           {% endif %}
@@ -59,7 +59,7 @@
       <button type="button" class="header__callback" data-popup="callback">
         Заказать звонок
         <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="Телефон мемориальных услуг"
-          title="Телефон мемориальных услуг" />
+             title="Телефон мемориальных услуг"/>
       </button>
       <nav class="nav">
         <ul class="nav__list">
@@ -67,7 +67,7 @@
             <div class="nav__item-inner">
               <a href="{% url 'category' %}">Каталог</a>
               <img src="{% static 'theme/mb/images/icon/chevron-down_white.svg' %}" alt="Иконка открытие меню"
-                title="Иконка открытие меню" class="nav__chevron" />
+                   title="Иконка открытие меню" class="nav__chevron"/>
             </div>
             {% if category_menu %}
             <ul class="nav__submenu submenu">
@@ -84,12 +84,18 @@
           <li class="nav__item"><a href="{% url 'delivery' %}">Оплата</a></li>
           <li class="nav__item"><a href="{% url 'gallery' %}">Наши работы</a></li>
           <li class="nav__item">
-            <a href="{% url 'about' %}">О нас</a>
+            <div class="nav__item-inner">
+              <a href="{% url 'about' %}">О нас</a>
+              <button type="button" class="nav__chevron">
+                <img src="{% static 'theme/mb/images/icon/chevron-down_white.svg' %}"
+                     alt="Иконка открытие меню"
+                     title="Иконка открытие меню"/>
+              </button>
+            </div>
             <ul class="nav__submenu submenu">
               <li><a href="{% url 'blog' %}">Статьи</a></li>
             </ul>
-            <img src="{% static 'theme/mb/images/icon/chevron-down_white.svg' %}" alt="Иконка открытие меню"
-              title="Иконка открытие меню" />
+
           </li>
           <li class="nav__item"><a href="{% url 'contact' %}">Контакты</a></li>
         </ul>
