--- a/#src/scss/pages/catalog/category-details.scss
+++ b/#src/scss/pages/catalog/category-details.scss
@@ -51,7 +51,6 @@
       @media screen and (max-width: 1200px) {
         width: 100%
       }
-
     }
   }
 
@@ -91,16 +90,16 @@
       min-width: 290px;
 
       @media screen and (max-width: 1200px) {
-        //position: fixed;
-        //top: 0;
-        //left: -150%;
-        //width: 100%;
-        //height: calc(100vh - 80px);
-        //overflow-y: auto;
-        //background-color: rgba($color: $white, $alpha: 1.0);
-        //padding: 30px;
-        //z-index: 101;
-        //transition: $animation_speed;
+        position: fixed;
+        top: 0;
+        left: -150%;
+        width: 100%;
+        height: calc(100vh - 80px);
+        overflow-y: auto;
+        background-color: rgba($color: $white, $alpha: 1.0);
+        padding: 30px;
+        z-index: 101;
+        transition: $animation_speed;
       }
 
       .form__submit {
