--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -4595,6 +4595,19 @@ body::after {
     width: 100%;
   }
 
+  .category-details__col:nth-child(1) {
+    position: fixed;
+    top: 0;
+    left: -150%;
+    width: 100%;
+    height: calc(100vh - 80px);
+    overflow-y: auto;
+    background-color: white;
+    padding: 30px;
+    z-index: 101;
+    transition: 0.5s;
+  }
+
   .category-details__col:nth-child(2) {
     display: flex;
     flex-direction: column;
