--- a/#src/templates/theme/pages/category-detail.html
+++ b/#src/templates/theme/pages/category-detail.html
@@ -58,14 +58,15 @@
       </div>
     </div>
   </section>
-
-  <div class="category-detail__text">
-    <div class="category-detail__container">
-      <div class="text">
-        {{category.description|safe}}
+  {% if category.description %}
+    <div class="category-detail__text">
+      <div class="category-detail__container">
+        <div class="text">
+          {{category.description|safe}}
+        </div>
       </div>
     </div>
-  </div>
+  {% endif %}
 
   <section class="index-contact">
     <div class="index-contact__container">
