--- a/#src/templates/theme/pages/catalog/product.html
+++ b/#src/templates/theme/pages/catalog/product.html
@@ -5,7 +5,7 @@
 {{ product.meta_title }}
 {% else %}
   {% if product.category|lower != "оградки" %}
-  Купить памятник из гранита {% if product.model != "None" %}модель {%filter lower%}{{product.model }}{% endfilter %}{% else %}{%filter lower%}{{product.name }}{% endfilter %}{% endif %} цена - {{ product.price }} в Томске | Акрополь
+  Купить памятник из гранита {% if product.model %}модель {%filter lower%}{{product.model }}{% endfilter %}{% else %}{%filter lower%}{{product.name }}{% endfilter %}{% endif %} цена - {{ product.price }} в Томске | Акрополь
   {% else %}
     Купить оградку  {% if product.model %}тип {%filter lower%}{{product.model }}{% endfilter %}{% else %}{%filter lower%}{{product.name }}{% endfilter %}{% endif %} в Томске | Акрополь
   {% endif %}
