--- a/#src/templates/admin/shop/product/product_edit.html
+++ b/#src/templates/admin/shop/product/product_edit.html
@@ -55,13 +55,13 @@
               {{ form.description }} {{ form.description.errors }}
             </div>
 
-            <div class="form__group form__group-image">
-              <label for="{{ image_form.src.id_for_label }}" class="form__controls-label"> Дополнительные изображения :
-              </label>
-              {{ image_form.src }} {{ image_form.src.errors }}
-            </div>
-            <div class="product-field"></div>
-            <div class="product-block__plus form__btn">Добавить изрбражение</div>
+<!--            <div class="form__group form__group-image">-->
+<!--              <label for="{{ image_form.src.id_for_label }}" class="form__controls-label"> Дополнительные изображения :-->
+<!--              </label>-->
+<!--              {{ image_form.src }} {{ image_form.src.errors }}-->
+<!--            </div>-->
+<!--            <div class="product-field"></div>-->
+<!--            <div class="product-block__plus form__btn">Добавить изрбражение</div>-->
             <div class="form__grid">
               <div class="form__group">
                 <label for="{{ form.sale_price.id_for_label }}" class="form__controls-label">
@@ -137,11 +137,6 @@
               <label for="{{ form.status.id_for_label }}" class="form__controls-label"> Опубликовать ? :</label>
             </div>
 
-            <div class="form__group">
-              <label for="{{ form.related_products.id_for_label }}" class="form__controls-label">Сопутствующий товар
-                :</label>
-              {{ form.related_products }} {{ form.related_products.errors }}
-            </div>
           </div>
         </div>
       </div>
