--- a/#src/templates/theme/pages/service/service_model.html
+++ b/#src/templates/theme/pages/service/service_model.html
@@ -4,9 +4,8 @@
 {% endblock %}
 {% block description %}
 Закажите 3D-модель памятника в Томске.
-Изготовим макет любой сложности. Доставим и установим готовую конструкцию. Заказать 3D-модель можно по номеру +7(900)
-921-09-15 и +7(903) 955-40-18
-или на нашем сайте
+Изготовим макет любой сложности. Доставим и установим готовую конструкцию. Заказать 3D-модель можно по номеру
++7(900) 921-09-15 и +7(903) 955-40-18 или на нашем сайте
 {% endblock %}
 {% block keywords %}
 гравировка, гравировка томск, гравировка на памятник
