--- a/#src/scss/components/popup.scss
+++ b/#src/scss/components/popup.scss
@@ -256,3 +256,76 @@ body::after {
     height: 40px;
   }
 }
+
+.notice {
+
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  overflow: hidden;
+  z-index: 99;
+
+  @media screen and (max-width: 992px) {
+    bottom: 100px;
+    right: 20px;
+  }
+
+  &--offer {
+
+  }
+
+  //.notice__wrapper
+  &__wrapper {
+  }
+
+  //.notice__content
+  &__content {
+    display: grid;
+    gap: 20px;
+  }
+
+  //.notice__percent
+  &__percent {
+    font-size: 35px;
+    font-weight: 800;
+    color: #FFFFFF;
+  }
+
+  //.notice__text
+  &__text {
+    color: #41a2d0;
+    font-size: 20px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    border-radius: 50%;
+    background-color: rgba($color: #ffffff, $alpha: 1);
+    border: 1px solid #41a2d0;
+    cursor: pointer;
+    overflow: hidden;
+
+    @media screen and (max-width: 992px) {
+      width: 30px;
+      height: 30px;
+    }
+  }
+
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 5px #41a2d0, 0 0 10px #41a2d0;
+    border-radius: 50%;
+  }
+  50% {
+    box-shadow: 0 0 15px #41a2d0, 0 0 30px #41a2d0;
+  }
+  100% {
+    box-shadow: 0 0 5px #41a2d0, 0 0 10px #41a2d0;
+    border-radius: 50%;
+  }
+}
+
