--- a/main/core/theme/mb/templates/components/popup.html
+++ b/main/core/theme/mb/templates/components/popup.html
@@ -114,3 +114,12 @@
     </div>
   </div>
 </div>
+
+<div id="stock" class="notice notice--offer popup_show" data-popup-id="{{ page_name }}">
+  <div class="notice__wrapper">
+    <div class="notice__content">
+      <p class="notice__text"><i class="fa-brands fa-whatsapp"></i></p>
+      <p class="notice__text"><i class="fa-brands fa-telegram"></i></p>
+    </div>
+  </div>
+</div>
