--- a/#src/templates/theme/components/popup.html
+++ b/#src/templates/theme/components/popup.html
@@ -118,8 +118,8 @@
 <div id="stock" class="notice notice--offer popup_show" data-popup-id="{{ page_name }}">
   <div class="notice__wrapper">
     <div class="notice__content">
-      <p class="notice__text"><i class="fa-brands fa-whatsapp"></i></p>
-      <p class="notice__text"><i class="fa-brands fa-telegram"></i></p>
+      <a href="https://wa.me/89039554018" class="notice__text"><i class="fa-brands fa-whatsapp"></i></a>
+      <a href="https://t.me/89039554018" class="notice__text"><i class="fa-brands fa-telegram"></i></a>
     </div>
   </div>
 </div>
