--- a/#src/templates/theme/components/header-single.html
+++ b/#src/templates/theme/components/header-single.html
@@ -3,7 +3,7 @@
   <div class="header-under__container">
     <div class="header-under__inner">
       <a href="/" class="header-under__logo">
-        <img src="{% static 'theme/mb/images/logo.png' %}" alt="Мемориальные услуги в Томске"
+        <img src="{{ site_settings.logo.url }}" alt="Мемориальные услуги в Томске"
              title="Мемориальные услуги в Томске"/>
         <span>Основан в 1989 г.</span>
       </a>
@@ -11,21 +11,21 @@
         <p class="header-under__address-title">Адрес:</p>
         <div class="header-under__address-row">
           <div class="header-under__address-col">
-            <p>Яковлева, 41а</p>
-            <p>Пн-Пт: 09:00 – 18:00</p>
-            <p>Сб-Вс: 10:00 – 17:00</p>
-            <a href="tel:+79009210915">
-              +7(900) 921-09-15
+            <p>{{ site_settings.address }}</p>
+            <p>{{ site_settings.time_work }}</p>
+            <p>{{ site_settings.time_work_two }}</p>
+            <a href="tel:{{ site_settings.phone }}">
+              {{ site_settings.phone }}
               <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="Заказать звонок"
                    title="Заказать звонок"/>
             </a>
           </div>
           <div class="header-under__address-col">
-            <p>Демьяна Бедного, 16а ст1</p>
-            <p>Пн-Пт: 09:00 – 18:00</p>
-            <p>Сб-Вс: 10:00 – 17:00</p>
-            <a href="tel:+79039554018">
-              +7(903) 955-40-18
+            <p>{{ site_settings.address_two }}</p>
+            <p>{{ site_settings.time_work }}</p>
+            <p>{{ site_settings.time_work_two }}</p>
+            <a href="tel:{{ site_settings.phone_two }}">
+              {{ site_settings.phone_two }}
               <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="Заказать звонок"
                    title="Заказать звонок"/>
             </a>
