--- a/#src/templates/theme/pages/service/service_grav.html
+++ b/#src/templates/theme/pages/service/service_grav.html
@@ -3,12 +3,11 @@
 Гравировка на памятник в Томске | Акрополь
 {% endblock %}
 {% block description %}
-Закажите качественную гравировку на памятник в Томске.
-Мы создаем точные и долговечные надписи, которые сохранят память на долгие годы.
-Индивидуальный подход к каждому заказу, высокий уровень исполнения и внимание к деталям.
+Гравировка на памятник в Томске от компании "Акрополь". Сделать гравировка портрета на памятник под ключ.
+Мы создаем точные и долговечные надписи на памятниках, которые сохранят память на долгие годы.
 {% endblock %}
 {% block keywords %}
-гравировка, гравировка томск, гравировка на памятник
+гравировка, гравировка томск, сделать гравировку, гравировка на памятник
 {% endblock %}
 {% block content %}
 
