--- a/#src/templates/theme/pages/service/service_grav.html
+++ b/#src/templates/theme/pages/service/service_grav.html
@@ -3,7 +3,7 @@
 Гравировка на памятник в Томске | Акрополь
 {% endblock %}
 {% block description %}
-Гравировка на памятник в Томске от компании "Акрополь". Сделать гравировка портрета на памятник под ключ.
+Гравировка на памятник в Томске от компании Акрополь. Сделать гравировка портрета на памятник под ключ.
 Мы создаем точные и долговечные надписи на памятниках, которые сохранят память на долгие годы.
 {% endblock %}
 {% block keywords %}
