--- a/#src/templates/admin/contact-page/contact.html
+++ b/#src/templates/admin/contact-page/contact.html
@@ -46,9 +46,9 @@
               {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.text.id_for_label }}" class="form__controls-label"> Текст :
+              <label for="{{ form.description.id_for_label }}" class="form__controls-label"> {{ form.description.label }} :
               </label>
-              {{ form.text }} {{ form.text.errors }}
+              {{ form.description }} {{ form.description.errors }}
             </div>
           </div>
         </div>
