--- a/main/core/theme/mb/templates/pages/contact.html
+++ b/main/core/theme/mb/templates/pages/contact.html
@@ -51,7 +51,7 @@
 						<img src="{% static 'theme/mb/images/icon/location.svg' %}" alt="Иконка телефона" title="Иконка телефона">
 						<div class="item-contact__row-info">
 							<p class="item-contact__row-big">Сегодня</p>
-							<p class="item-contact__row-small">{{ site_settings.time_work }}/p>
+							<p class="item-contact__row-small">{{ site_settings.time_work }}</p>
 						</div>
 						<div class="item-contact__hidden">
 							<p>В воскресенье режим работы по догоовренности</p>
