--- a/main/core/theme/mb/templates/pages/contact.html
+++ b/main/core/theme/mb/templates/pages/contact.html
@@ -3,11 +3,10 @@
 {{ contact.meta_title }}
 {% endblock %}
 {% block description %}
-Контактная информация мастерской Акрополь в городе Томск. Адреса, график работы, почта, номера телефонов, реквизиты. 
-Телефоны для связи +7(900) 921-09-15, +7(903) 955-40-18
+{{ contact.meta_description }}
 {% endblock %}
 {% block keywords %}
-контакты акрополь, контактная информация акрополь, номер телефона акрополь, телефон акрополь
+{{ contact.meta_keywords }}
 {% endblock %}
 {% block content %}
 
